less/components/registration.less
/*!
 * Copyright (c) 2021 Eclipse Foundation, Inc.
 * 
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 * 
 * Contributors:
 *   Martin Lowe <martin.lowe@eclipse-foundation.org>
 * 
 * SPDX-License-Identifier: EPL-2.0
*/

.eclipsefdn-registration {
  & {
    margin: 60px 0px;
  }
  .eclipsefdn-registration-header h2 {
    margin-top: 0px;
    text-align: center;
    color: @brand-primary;
  }
  .eclipsefdn-registration-body {
    text-align: left;
  }
  .eclipsefdn-registration-links {
    padding-top: 30px;
  }
  img {
    max-width: 256px;
    width: 100%;
  }
}

